--- a/1-Python Basics/1.0-basic.ipynb
+++ b/1-Python Basics/1.0-basic.ipynb
@@ -3,16 +3,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/ailolhunter/Complete-Python-Bootcamp/blob/main/1-Python%20Basics/1.0-basic.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "APfGYWQnSlvI"
       },
       "source": [
@@ -41,19 +31,9 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "HsT9bL8zSlvK",
-        "outputId": "d794e291-ec34-42ae-f031-91aa4a8fb896"
+        "id": "HsT9bL8zSlvK"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Krish\n",
-            "Naik\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "## Basic Syntax Rules In Python\n",
         "## Case sensitivity- Python is case sensitive\n",
@@ -79,19 +59,9 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "3QVfKvDxSlvM",
-        "outputId": "24ed2633-ec57-40ea-e31f-d8a637f0b99d"
+        "id": "3QVfKvDxSlvM"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "32\n",
-            "32\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "## Indentation\n",
         "## Python uses indentation to define blocks of code. Consistent use of spaces (commonly 4) or a tab is required.\n",
@@ -108,18 +78,9 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "3XEljgDRSlvN",
-        "outputId": "feacc559-cc00-49ab-b78c-f1666fdb348d"
+        "id": "3XEljgDRSlvN"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Hello World\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "## This is a single line comment\n",
         "print(\"Hello World\")"
@@ -129,18 +90,9 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "6wE-WLNRSlvN",
-        "outputId": "7ebe2e03-d644-424a-e3b6-5cb7ee9d9dcf"
+        "id": "6wE-WLNRSlvN"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "43\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "## Line Continuation\n",
         "##Use a backslash (\\) to continue a statement to the next line\n",
@@ -155,18 +107,9 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "osh7c0vnSlvO",
-        "outputId": "d9ad9bf7-b23b-497d-ece0-260e43de6169"
+        "id": "osh7c0vnSlvO"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "15\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "## Multiple Statements on a single line\n",
         "x=5;y=10;z=x+y\n",
@@ -191,21 +134,9 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "TTMQIouVSlvO",
-        "outputId": "120d5059-6864-4e58-b5fb-a4b5bfca31aa"
+        "id": "TTMQIouVSlvO"
       },
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "int"
-            ]
-          },
-          "execution_count": 10,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
+      "outputs": [],
       "source": [
         "\n",
         "\n",
@@ -216,21 +147,9 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "gmjDVpPzSlvP",
-        "outputId": "9ad05e8d-7021-48c7-ba35-e1a4e0fb4a28"
+        "id": "gmjDVpPzSlvP"
       },
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "str"
-            ]
-          },
-          "execution_count": 9,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
+      "outputs": [],
       "source": [
         "type(name)"
       ]
@@ -239,19 +158,9 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "tSycYX9cSlvP",
-        "outputId": "8226769a-2128-4228-9f82-372cd7653ecd"
+        "id": "tSycYX9cSlvP"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "<class 'int'>\n",
-            "<class 'str'>\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "## Type Inference\n",
         "variable=10\n",
@@ -264,18 +173,9 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "4d0C0rChSlvP",
-        "outputId": "1a4b6f0b-a114-43ee-e2ed-50444d04355e"
+        "id": "4d0C0rChSlvP"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "32\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "age=32\n",
         "if age>30:\n",
@@ -286,22 +186,9 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "A5om0eoeSlvP",
-        "outputId": "54a71089-eff9-46d3-9419-7f914d209781"
+        "id": "A5om0eoeSlvP"
       },
-      "outputs": [
-        {
-          "ename": "NameError",
-          "evalue": "name 'b' is not defined",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "Cell \u001b[1;32mIn[15], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m a\u001b[38;5;241m=\u001b[39m\u001b[43mb\u001b[49m\n",
-            "\u001b[1;31mNameError\u001b[0m: name 'b' is not defined"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "## Name Error\n",
         "a=b"
@@ -311,20 +198,9 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "PA3Cd5skSlvQ",
-        "outputId": "4a330d1f-3dda-439a-cb8f-918763aa55ff"
+        "id": "PA3Cd5skSlvQ"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Correct Indentation\n",
-            "This will print\n",
-            "Outside the if block\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "## Code exmaples of indentation\n",
         "if True:\n",
@@ -372,8 +248,7 @@
       "version": "3.12.0"
     },
     "colab": {
-      "provenance": [],
-      "include_colab_link": true
+      "provenance": []
     }
   },
   "nbformat": 4,
