--- a/1-Python Basics/1.0-basic.ipynb
+++ b/1-Python Basics/1.0-basic.ipynb
@@ -38,8 +38,8 @@
         "## Basic Syntax Rules In Python\n",
         "## Case sensitivity- Python is case sensitive\n",
         "\n",
-        "name=\"lol\"\n",
-        "Name=\"Nhunter\"\n",
+        "name=\"Krish\"\n",
+        "Name=\"Naik\"\n",
         "\n",
         "print(name)\n",
         "print(Name)\n"
