--- a/1-Python Basics/1.0-basic.ipynb
+++ b/1-Python Basics/1.0-basic.ipynb
@@ -3,6 +3,16 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/ailolhunter/Complete-Python-Bootcamp/blob/main/1-Python%20Basics/1.0-basic.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "APfGYWQnSlvI"
       },
       "source": [
@@ -29,17 +39,30 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
-        "id": "HsT9bL8zSlvK"
+        "id": "HsT9bL8zSlvK",
+        "outputId": "0d40e7d1-0b2f-4cbb-cc9d-2e610e4e5bce",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "anana\n",
+            "Naiaak\n"
+          ]
+        }
+      ],
       "source": [
         "## Basic Syntax Rules In Python\n",
         "## Case sensitivity- Python is case sensitive\n",
         "\n",
-        "name=\"Krish\"\n",
-        "Name=\"Naik\"\n",
+        "name=\"anana\"\n",
+        "Name=\"Naiaak\"\n",
         "\n",
         "print(name)\n",
         "print(Name)\n"
@@ -248,7 +271,8 @@
       "version": "3.12.0"
     },
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     }
   },
   "nbformat": 4,
